<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iamruler.iamruler.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <customviews.DrawView
        android:id="@+id/DrawView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <customviews.DraggableMeasureView
        android:id="@+id/DragView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"/>

    <customviews.DraggableMeasureView
        android:id="@+id/DragViewVertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clipToPadding="false"/>
</FrameLayout>
