<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayout02"
        android:weightSum="1"
        android:gravity="center_horizontal">

        <TextView
            android:text="Width:"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView6"
            android:textAlignment="textEnd" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/measure_edit_width"
            android:hint="width"
            android:selectAllOnFocus="false"
            android:textAlignment="center" />

        <TextView
            android:text="Height:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_weight="0.07"
            android:textAlignment="textEnd" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/measure_edit_height"
            android:hint="height"
            android:layout_width="70dp"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/measure_type"
            android:layout_height="wrap_content"
            android:entries="@array/measureTypes"
            android:layout_width="115dp">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/measure_edit_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/todo_edit_summary"
            android:imeOptions="actionNext"
            android:textAlignment="center">
        </EditText>
    </LinearLayout>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:id="@+id/measure_datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

<!--
    <Button
        android:id="@+id/todo_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_edit_confirm" >
    </Button>-->

</LinearLayout>
