<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:layout_weight="0.64">
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_todos" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New"
        android:id="@+id/addNewMeasure"/>

</LinearLayout>
